# physics-ai

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION_CHECKLIST.md  Dockerfile  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SETUP_CHECKLIST.md  FINAL_UPGRADE_STATUS.md  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  UPGRADE_IMPLEMENTATION_GUIDE.md  UPGRADE_IMPLEMENTATION_SUMMARY.md  VISION.md  pyproject.toml  requirements.txt  run_dev.py  setup_github.sh  setup_labels.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labels.json  pull_request_template.md
ai/: llm_integration.py
api/: __init__.py  app.py
core/: __init__.py  engine.py  knowledge_synthesis.py  reasoning.py
dashboard/: __init__.py  app.py
deploy/: deploy-ec2.sh
docs/: ADDITIONAL_DREAM_PATTERNS.md  API_REFERENCE.md  ASTROPHYSICS_INTEGRATION_INVENTORY.md  COMPLETE_FEATURE_LIST.md  CONTEXT_MEMORY_SYSTEM.md  DASHBOARD_GUIDE.md  DEEPSEEK_INSPIRED_IMPLEMENTATION.md  DIRECTORY_STRUCTURE.md  DREAM_INSPIRED_FEATURES.md  DREAM_INSPIRED_UPGRADE_PLAN.md  DREAM_PATTERN_ANALYSIS.md  EQUATIONAL_AI.md  MASTER_ARCHITECTURE.md  PHYSICS_FRAMEWORK.md  README.md  SELF_EVOLVING_AI_IMPLEMENTATION.md  SUBSTRATE_ARCHITECTURE.md  openapi.json  openapi.yaml
evolution/: __init__.py  code_generator.py  performance_evaluator.py  self_evolution.py  self_modification.py  vector_evolution_integration.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ingestion/: arxiv_ingestion.py
integration/: __init__.py  integration_test.py  vector_integration_test.py
loggers/: __init__.py  evolution_logger.py  performance_logger.py  system_logger.py
physics/: __init__.py  equations.py  models.py  theory_integration.py
rules/: __init__.py  enhanced_rule_engine.py  rule_engine.py  rule_evolution.py  rule_storage.py  vector_rule_integration.py
substrate/: __init__.py  main.py
tests/: __init__.py  test_context_memory.py  test_core.py  test_dashboard_integration.py  test_equational.py  test_equations.py  test_evolution.py  test_models.py  test_physics.py  test_rules.py  test_websocket.py
(+329 files in other folders)
