[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-ai"
version = "1.0.0"
description = "Unified open-source infrastructure for physics: neurosymbolic reasoning, knowledge graph, simulations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Abhishek Sehgal" }]
keywords = ["physics", "neurosymbolic", "AI", "knowledge-graph", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sympy>=1.12",
    "pint>=0.23",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "sphinx>=7.1.0",
    "matplotlib>=3.7.0",
    "python-dateutil>=2.8.2",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.6",
    "dash>=2.14.2",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
    "PyPDF2>=3.0.1",
    "pymupdf>=1.23.8",
    "arxiv>=1.4.8",
    "scikit-learn>=1.3.0",
    "networkx>=3.2.1",
    "websocket-client>=1.6.4",
    "openai>=1.52.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = ["pytest-xdist", "pre-commit"]
redis = ["redis>=4.0.0"]
prometheus = ["prometheus-client>=0.19.0"]
all = ["redis>=4.0.0", "prometheus-client>=0.19.0"]

[project.urls]
Homepage = "https://github.com/vastdreams/physics-ai"
Repository = "https://github.com/vastdreams/physics-ai"
Documentation = "https://github.com/vastdreams/physics-ai#readme"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "frontend*", "deploy*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
